--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "axios": "^1.6.3",
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-router": "^6.21.0",
     "react-router-dom": "^6.21.0",
-    "sass": "^1.69.5"
+    "react-toastify": "^9.1.3",
+    "sass": "^1.69.5",
+    "sequence": "^3.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
